src/ai/snapshots/jiq__ai__ai_render_tests__snapshot_tests__snapshot_ai_popup_empty_state.snap
---
source: src/ai/ai_render.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                       ┌ AI Assistant ─────────── Ctrl+A to close ┐ "
"                                                       │Ready to help with your jq queries.       │ "
"                                                       │                                          │ "
"                                                       │When you encounter an error, I'll         │ "
"                                                       │provide suggestions to fix it.            │ "
"                                                       │                                          │ "
"                                                       │                                          │ "
"                                                       │                                          │ "
"                                                       │                                          │ "
"                                                       └──────────────────────────────────────────┘ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
