src/ai/snapshots/jiq__ai__ai_render_tests__snapshot_tests__snapshot_ai_popup_more_than_five_suggestions.snap
---
source: src/ai/ai_render.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                       ┌ AI Assistant  to apply | Ctrl+A to close ┐ "
"                                                       │1. [Fix] .users[0]                        │ "
"                                                       │   First user                             │ "
"                                                       │                                          │ "
"                                                       │2. [Next] .users[1]                       │ "
"                                                       │   Second user                            │ "
"                                                       │                                          │ "
"                                                       │3. [Optimize] .users[2]                   │ "
"                                                       │   Third user                             │ "
"                                                       └──────────────────────────────────────────┘ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
