src/ai/snapshots/jiq__ai__ai_render_tests__snapshot_tests__snapshot_ai_popup_not_configured.snap
---
source: src/ai/ai_render.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                       ┌ AI Assistant ─────────── Ctrl+A to close ┐ "
"                                                       │⚙ Setup Required                          │ "
"                                                       │                                          │ "
"                                                       │To enable AI assistance, add this         │ "
"                                                       │to ~/.config/jiq/config.toml:             │ "
"                                                       │                                          │ "
"                                                       │[ai]                                      │ "
"                                                       │enabled = true                            │ "
"                                                       │                                          │ "
"                                                       └──────────────────────────────────────────┘ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
