src/ai/snapshots/jiq__ai__ai_render_tests__snapshot_tests__snapshot_ai_popup_with_selected_suggestion.snap
---
source: src/ai/ai_render.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                       ┌ AI Assistant  to apply | Ctrl+A to close ┐ "
"                                                       │1. [Fix] .users[] | select(.active)       │ "
"                                                       │   Filters to only active users           │ "
"                                                       │                                          │ "
"                                                       │2. [Next] .users[] | .email               │ "
"                                                       │   Extracts email addresses               │ "
"                                                       │                                          │ "
"                                                       │3. [Optimize] .users | map(.name)         │ "
"                                                       │   More efficient mapping                 │ "
"                                                       └──────────────────────────────────────────┘ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
